exploration page fix align left phone

--- a/src/pages/Exploration/ExplorationPage.css
+++ b/src/pages/Exploration/ExplorationPage.css
@@ -16,6 +16,11 @@
   border-bottom: 1px solid #000000;
 }
 
+.content-nusantara.right {
+  justify-self: end;
+  text-align: right;
+}
+
 .content-nusantara .title {
   font-size: 40px;
   margin-bottom: 10px;
@@ -109,6 +114,11 @@
 
   .content-nusantara {
     padding: 0px 5px;
+  }
+
+  .content-nusantara.right {
+    justify-self: start;
+    text-align: left;
   }
 
   .content-nusantara .title {
